# SRiR-2026-Dijkstra

./: .gitignore  COMMIT_CONVENTION.md  README.eng.md  README.md
1_MPI/: CMakeLists.txt  Makefile
1_MPI/data/: matrix1.txt  matrix2.txt  matrix3.txt  matrix_10.txt  matrix_100.txt  matrix_1000.txt  matrix_25.json  matrix_25.txt  matrix_4.json  matrix_4.txt
1_MPI/include/: Edge.hpp
1_MPI/src/: Dijkstra.cpp  DijkstraMPI.cpp
2_Distributed/: Makefile
2_Distributed/data/: matrix1.txt  matrix_100.txt  matrix_4.json
2_Distributed/src/: DijkstraUPCXX.cpp
GUI/: app.py
scripts/: fake_runner.py  random_matrix_generator.py  visualize_graph.py
scripts/test_matrices/: test_matrix_10x10.txt
webapp/: README.md  app.py  requirements.txt
webapp/static/css/: style.css
webapp/static/js/: app.js
webapp/templates/: index.html
